--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="828.0" style="-fx-background-image: url('file:/D:/Work/Music_Player_Java/src/sample/unnamed.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <Button layoutX="346.0" layoutY="48.0" mnemonicParsing="false" text="Play" />
-   <Button layoutX="346.0" layoutY="120.0" mnemonicParsing="false" onAction="#create_playlist" text="Creeaza playlist" />
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="866.0" style="-fx-background-image: url('file:/D:/Work/Music_Player_Java/src/sample/unnamed.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <Button layoutX="33.0" layoutY="234.0" mnemonicParsing="false" onAction="#play_song" prefHeight="70.0" prefWidth="200.0" text="Play a song">
+      <font>
+         <Font name="System Bold Italic" size="26.0" />
+      </font></Button>
+   <Button layoutX="33.0" layoutY="313.0" mnemonicParsing="false" onAction="#create_playlist" prefHeight="64.0" prefWidth="200.0" text="Create a playlist">
+      <font>
+         <Font name="System Bold Italic" size="20.0" />
+      </font></Button>
    <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="34.0" layoutY="20.0">
       <image>
          <Image url="@DodePlayer.png" />
       </image>
    </ImageView>
+   <Label layoutX="244.0" layoutY="19.0" prefHeight="38.0" prefWidth="99.0" text="Now playing:" textFill="WHITE">
+      <font>
+         <Font name="System Bold Italic" size="15.0" />
+      </font>
+   </Label>
+   <Label layoutX="352.0" layoutY="27.0" prefHeight="23.0" prefWidth="504.0" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="15.0" />
+      </font>
+   </Label>
 </Pane>
