--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,17 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="866.0" style="-fx-background-image: url('file:/D:/Work/Music_Player_Java/src/sample/unnamed.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <Button layoutX="33.0" layoutY="234.0" mnemonicParsing="false" onAction="#play_song" prefHeight="70.0" prefWidth="200.0" text="Play a song">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="918.0" style="-fx-background-image: url('file:/D:/Work/Music_Player_Java/src/sample/unnamed.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <Button cancelButton="true" layoutX="33.0" layoutY="234.0" mnemonicParsing="false" onAction="#play_song" pickOnBounds="false" prefHeight="70.0" prefWidth="200.0" text="Play a song">
       <font>
          <Font name="System Bold Italic" size="26.0" />
       </font></Button>
-   <Button layoutX="33.0" layoutY="313.0" mnemonicParsing="false" onAction="#create_playlist" prefHeight="64.0" prefWidth="200.0" text="Create a playlist">
+   <Button fx:id="chooseplaylist" layoutX="34.0" layoutY="312.0" mnemonicParsing="false" onAction="#choose_playlist" prefHeight="64.0" prefWidth="200.0" text="Choose a playlist">
       <font>
          <Font name="System Bold Italic" size="20.0" />
       </font></Button>
@@ -21,14 +22,35 @@
          <Image url="@DodePlayer.png" />
       </image>
    </ImageView>
-   <Label layoutX="244.0" layoutY="19.0" prefHeight="38.0" prefWidth="99.0" text="Now playing:" textFill="WHITE">
+   <Label layoutX="244.0" layoutY="20.0" prefHeight="38.0" prefWidth="99.0" text="Now playing:" textFill="WHITE">
       <font>
          <Font name="System Bold Italic" size="15.0" />
       </font>
    </Label>
-   <Label layoutX="352.0" layoutY="27.0" prefHeight="23.0" prefWidth="504.0" textFill="WHITE">
+   <Label fx:id="label1" layoutX="244.0" layoutY="58.0" onMouseClicked="#afisare_melodie" prefHeight="23.0" prefWidth="660.0" textFill="WHITE">
       <font>
          <Font name="System Bold" size="15.0" />
+      </font>
+   </Label>
+   <Button fx:id="createplaylist" layoutX="34.0" layoutY="384.0" mnemonicParsing="false" onAction="#create_playlist" prefHeight="64.0" prefWidth="200.0" text="Create a playlist">
+      <font>
+         <Font name="System Bold Italic" size="20.0" />
+      </font>
+   </Button>
+   <Button layoutX="552.0" layoutY="86.0" mnemonicParsing="false" onAction="#stop_melodie" prefHeight="25.0" prefWidth="93.0" text="Stop">
+      <font>
+         <Font name="System Bold Italic" size="12.0" />
+      </font>
+   </Button>
+   <Button layoutX="676.0" layoutY="86.0" mnemonicParsing="false" onAction="#play_pause" prefHeight="25.0" prefWidth="93.0" text="Play/Pause">
+      <font>
+         <Font name="System Bold Italic" size="12.0" />
+      </font>
+   </Button>
+   <Slider fx:id="slider_volume" layoutX="329.0" layoutY="91.0" max="1.0" onMouseDragged="#setvolume" prefHeight="14.0" prefWidth="183.0" />
+   <Label layoutX="244.0" layoutY="89.0" prefHeight="17.0" prefWidth="51.0" text="Volume:" textAlignment="JUSTIFY" textFill="WHITE">
+      <font>
+         <Font name="System Bold Italic" size="12.0" />
       </font>
    </Label>
 </Pane>
